fix: issue where login title clipped out of container

--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -518,7 +518,7 @@ body {
     font-family: Arial, sans-serif;
     align-self: center;
     font-size: 50px;
-    margin: 20px 0 0 0;
+    margin: 20px 0 10px 0;
     width: 83%;
 }
 
